make profile accept content too

--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -5,6 +5,9 @@
             height="{{- .imageHeight | default 150 -}}" width="{{- .imageWidth | default 150 -}}" />{{- end}}
         <h1>{{- .title | default $.Site.Title | markdownify -}}</h1>
         <span>{{- .subtitle | markdownify -}}</span>
+        <section class="entry-content">
+            <p>{{- .Content | markdownify -}}</p>
+        </section>
         {{- partial "social_icons.html" $.Site.Params.socialIcons -}}
 
         {{- with .buttons }}
